--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,9 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/euroleaguer)](https://CRAN.R-project.org/package=Rduinoiot)
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+![Status](https://progress-bar.dev/25/?title=progress)
 <!-- badges: end -->
 
 **euroleaguer** provides an easy way to retrieve data from [EuroLeague](<https://www.euroleaguebasketball.net/euroleague/>) and [EuroCup](<https://www.euroleaguebasketball.net/eurocup/>) API with R.
