--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 # euroleaguer <img src="man/figures/logo.png" align="right" width="100px">
 
 <!-- badges: start -->
-[![CRAN status](https://www.r-pkg.org/badges/version/euroleaguer)](https://CRAN.R-project.org/package=Rduinoiot)
+[![CRAN status](https://www.r-pkg.org/badges/version/euroleaguer)](https://CRAN.R-project.org/package=euroleaguer)
 [![R-CMD-check](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 ![Status](https://progress-bar.dev/25/?title=progress)
