--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,12 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 **euroleaguer** provides an easy way to retrieve data from [EuroLeague](<https://www.euroleaguebasketball.net/euroleague/>) and [EuroCup](<https://www.euroleaguebasketball.net/eurocup/>) API with R.
+
+<div style="display: flex; justify-content: center; align-items: center;">
+  <img src="man/figures/euroleague-logo.png" align="middle" height="50px" style="padding:10px">
+  <img src="man/figures/eurocup-logo.png" align="middle " height="50px" style="padding:10px">
+</div>
+
 This is an un-official API wrapper and we recommend to follow usual rules of conduct
 when dealing with open API calls.
 
@@ -35,4 +41,5 @@ To get the current development version from [GitHub](<https://github.com/>):
 # install.packages("devtools")
 devtools::install_github("FlavioLeccese92/euroleaguer")
 ```
+
 
