--- a/README.Rmd
+++ b/README.Rmd
@@ -14,32 +14,27 @@ knitr::opts_chunk$set(
 )
 ```
 
-# euroleaguer <img src="man/figures/logo.png" align="right" width="100px">
+# euroleaguer <img src="man/figures/logo.png" align="right" width="100px"/>
 
 <!-- badges: start -->
-[![CRAN status](https://www.r-pkg.org/badges/version/euroleaguer)](https://CRAN.R-project.org/package=euroleaguer)
-[![R-CMD-check](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml)
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-![Status](https://progress-bar.dev/75/?title=progress)
+
+[![CRAN status](https://www.r-pkg.org/badges/version/euroleaguer)](https://CRAN.R-project.org/package=euroleaguer) [![R-CMD-check](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/FlavioLeccese92/euroleaguer/actions/workflows/R-CMD-check.yaml) [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental) ![Status](https://progress-bar.dev/75/?title=progress)
+
 <!-- badges: end -->
 
-**euroleaguer** provides an easy way to retrieve data from [EuroLeague](<https://www.euroleaguebasketball.net/euroleague/>) and [EuroCup](<https://www.euroleaguebasketball.net/eurocup/>) API with R.
+**euroleaguer** provides an easy way to retrieve data from [EuroLeague](https://www.euroleaguebasketball.net/euroleague/) and [EuroCup](https://www.euroleaguebasketball.net/eurocup/) API with R.
 
-<div style="display: flex; justify-content: center; align-items: center;">
-  <img src="man/figures/euroleague-logo.png" align="middle" height="50px" style="padding:10px">
-  <img src="man/figures/eurocup-logo.png" align="middle " height="50px" style="padding:10px">
-</div>
+::: {style="display: flex; justify-content: center; align-items: center;"}
+<img src="man/figures/euroleague-logo.png" align="middle" height="50px" style="padding:10px"/> <img src="man/figures/eurocup-logo.png" align="middle " height="50px" style="padding:10px"/>
+:::
 
-This is an un-official API wrapper and we recommend to follow usual rules of conduct
-when dealing with open API calls.
+This is an un-official API wrapper and we recommend to follow usual rules of conduct when dealing with open API calls.
 
 ## Installation
 
-To get the current development version from [GitHub](<https://github.com/>):
+To get the current development version from [GitHub](https://github.com/):
 
 ```{r install-github, eval=FALSE, include=TRUE}
 # install.packages("devtools")
 devtools::install_github("FlavioLeccese92/euroleaguer")
 ```
-
-
