--- a/vignettes/articles/team-stats-court.Rmd
+++ b/vignettes/articles/team-stats-court.Rmd
@@ -34,7 +34,7 @@ font_add_google("Inconsolata", "Inconsolata")
 
 # Add Font Awesome for logos
 font_add(family = "Font Awesome 6 Brands", 
-         regular = "../../man/figures/fa-brands-400.ttf")
+         regular = "figures/fa-brands-400.ttf")
 showtext_opts(dpi = 200)
 showtext_auto()
 ```
@@ -55,7 +55,7 @@ GamePoints = getGamePoints("E2023", CompetitionGames$GameCode)
 
 
 ```{r court}
-source("../scripts/construct-court.R")
+source("scripts/construct-court.R")
 Court = ConstructCourt()
 
 # Define parameters for fitting coords into Court
@@ -171,7 +171,7 @@ PlotTitle = glue(
   {MaxGameDate}</span>")
 
 PlotSubtitle = glue(
-  "<span><img src = '../../man/figures/euroleague-logo-vertical.png'
+  "<span><img src = 'figures/euroleague-logo-vertical.png'
   height='50'></span>")
 
 PlotCaption = glue(
@@ -247,9 +247,9 @@ e = GamePoints %>%
 
 ```{r save, include=FALSE}
 # Save plot (standard width 4100)
-ggsave("team-stats-court.png", plot = e, path = "../../man/figures/",
+ggsave("team-stats-court.png", plot = e, path = "figures/",
        height = 2000, width = 3000, units = "px", dpi = 200)
 
 ```
 
-![](../../man/figures/team-stats-court.png)
+![](figures/team-stats-court.png)
