--- a/vignettes/articles/team-stats-radar.Rmd
+++ b/vignettes/articles/team-stats-radar.Rmd
@@ -12,6 +12,10 @@ knitr::opts_chunk$set(
 	warning = FALSE
 )
 invisible(Sys.setlocale(locale = "en_EN.UTF-8"))
+
+library(devtools)
+install_github("teunbrand/elementalist")
+install_github("flavioleccese92/euroleaguer")
 ```
 
 
