--- a/vignettes/articles/team-stats-radar.Rmd
+++ b/vignettes/articles/team-stats-radar.Rmd
@@ -33,6 +33,8 @@ to
 
 Data can be obtained through `getTeamStats` function.
 
+Resulted plot can be found at the bottom of this page.
+
 ## Setup
 
 ```{r setup}
@@ -221,11 +223,11 @@ e = e +
 
 ```{r save, include=FALSE}
 # Save plot (standard width 4100)
-ggsave("team-stats-radarchart.png", plot = e, path = "figures/",
+ggsave("team-stats-radarchart.png", plot = e, path = "../../man/figures/",
        height = 2000, width = 3000, units = "px", dpi = 200)
 
 ```
 
 ## Result
 
-![](figures/team-stats-radarchart.png)
+![](../../man/figures/team-stats-radarchart.png)
