--- a/README.Rmd
+++ b/README.Rmd
@@ -29,14 +29,14 @@ library(glue)
 
 <!-- badges: end -->
 
-**euroleaguer** provides an easy way to retrieve data from [EuroLeague](https://www.euroleaguebasketball.net/euroleague/) and [EuroCup](https://www.euroleaguebasketball.net/eurocup/) API with R.
+**euroleaguer** provides an easy way to retrieve data from [Euroleague](https://www.euroleaguebasketball.net/euroleague/) and [Eurocup](https://www.euroleaguebasketball.net/eurocup/) API with R.
 
 
 ![](man/figures/double-logo.png)
 
 
 
-This is an un-official API wrapper and we recommend to follow usual rules of conduct when dealing with open API calls.
+This is an unofficial API wrapper and we recommend to follow usual rules of conduct when dealing with open API calls.
 
 ## Installation
 
