vignette output as absolute path of directory

--- a/vignettes/articles/team-standings-race.Rmd
+++ b/vignettes/articles/team-standings-race.Rmd
@@ -20,18 +20,10 @@ install_github("flavioleccese92/euroleaguer")
 
 ## Goal
 
-We want to create a chart for each team showing the field-goals percentage and
-overall attempts on the court.
+We want to create a chart for each team showing the progression of standings and
+final competition score.
 
-Colours are ranging from
-<span style="font-family:'Source Code Pro';background-color:#C70D3A;color:white;">#C70D3A</span>
-  (lower percentages) to
-<span style="font-family:'Source Code Pro';background-color:#2EB086;color:white;">#2EB086</span>)
-  (high percentages)
-and size of hexagons <span style="color:#F47321; font-size:20px;">&#x2B22;</span>
-  are corresponding to the number of attempts.
-
-Data can be obtained through `getGamePoints` function.
+Data can be obtained through `getCompetitionStandings` function.
 
 Resulted plot can be found at the bottom of this page.
 
@@ -214,4 +206,4 @@ ggsave("team-standings-race.png", plot = e, path = "../../man/figures/",
 
 ## Result
 
-![](../../man/figures/team-standings-race.png)
+![](man/figures/team-standings-race.png)
